samples/_failures_safe/1761362608_5303c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dedab886.c: In function ‘main’:
./samples/SAFE/__tmp_dedab886.c:196:5: error: expected expression at end of input
  196 |     print_tokens(tokens,
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_dedab886.c:196:5: error: expected declaration or statement at end of input
